gestion des cotisations: creation des entités et migrations

--- a/.env
+++ b/.env
@@ -30,6 +30,6 @@ APP_SECRET=4d9b4f3c8e5ae8f175abcb7ac3c39050
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 #  DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/portefeuille?serverVersion=10.4.24-MariaDB&charset=utf8mb4"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/cotisation?serverVersion=10.4.24-MariaDB&charset=utf8mb4"
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
